--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "feedparser>=6.0.11",
+    "python-dotenv>=1.0.1",
 ]
 
 [dependency-groups]
