--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "feedparser>=6.0.11",
     "python-dotenv>=1.0.1",
+    "requests>=2.32.3",
 ]
 
 [dependency-groups]
