--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "feedparser>=6.0.11",
+    "google-api-python-client>=2.154.0",
+    "google-auth>=2.36.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.1",
     "google-generativeai>=0.8.3",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
